--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 
 :root {
   font-family: "Montserrat", sans-serif;
+  font-size: 12px;
   line-height: 1.5;
   font-weight: 400;
   font-synthesis: none;
